# discovery-archaeology-agent

./: CLAUDE.md
discovery-archaeology-agent/: .env.example  .gitignore  API_DOCS.md  FRONTEND_COPY_GUIDE.md  README.md  example_usage.py  pyproject.toml  run.py
discovery-archaeology-agent/discovery_archaeology_agent/: __init__.py  api.py  config.py  database.py  discovery_engine.py  main.py  models.py  openai_client.py  pattern_analyzer.py  schemas.py
frontend/: README.md  index.html
frontend/src/: App.tsx
frontend/src/components/: PatternsPreview.tsx  RecentAnalyses.tsx  SearchSection.tsx  TimelinePreview.tsx
frontend/src/pages/: AnalysisPage.tsx  Index.tsx  InventionsPage.tsx  PatternsPage.tsx  TimelinePage.tsx
